fix: minor code issues